# blade

./: .gitignore  CMakeLists.txt  Makefile  README.md
art/: player.psd
include/: animatedsprite.h  blade.h  entity.h  graphics.h  player.h  settings.h  sprite.h  timer.h  vector2.h
src/: animatedsprite.cpp  blade.cpp  entity.cpp  graphics.cpp  main.cpp  player.cpp  sprite.cpp  timer.cpp
